# plurality-mcp-server

./: .env.example  .releaserc  CHANGELOG.md  Dockerfile  MCP.postman_collection.json  README.md  main.py  pyproject.toml
.github/workflows/: publish-ghcr-prod.yml  publish-ghcr.yml
oasis-deployment/: .env.example  README.md  compose.yaml
ory-hydra/: docker-compose.yml  dynamic.yml  hydra.yml  traefik.yml
src/plurality_mcp_server/: app.py  auth.py  config.py  oauth.py  tools.py
