[project]
name = "plurality-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "duckduckgo-search>=6.0.0",
    "langchain-community>=0.0.20",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "pyjwt>=2.8.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]
