[project]
name = "plurality-mcp-server"
version = "0.1.0"
description = "Plurality MCP Server — open-source, zero-secret memory search for AI clients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plurality_mcp_server"]
